实现待办事项按照状态查询

--- a/MyToDo/MyToDo.csproj
+++ b/MyToDo/MyToDo.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\user.jpg" />
+    <None Remove="Images\wind.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <Resource Include="Images\user.jpg" />
+    <Resource Include="Images\wind.png" />
   </ItemGroup>
 
 </Project>
