这个备忘录基本完成，写一下OA的api

--- a/MyToDo/MyToDo.csproj
+++ b/MyToDo/MyToDo.csproj
@@ -5,11 +5,17 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>info_32px_1088486_easyicon.net.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\login.png" />
     <None Remove="Images\user.jpg" />
     <None Remove="Images\wind.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="info_32px_1088486_easyicon.net.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\login.png" />
     <Resource Include="Images\user.jpg" />
     <Resource Include="Images\wind.png" />
   </ItemGroup>
