--- a/MyToDo.Api/MyToDo.Api.csproj
+++ b/MyToDo.Api/MyToDo.Api.csproj
@@ -12,12 +12,19 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="MySql.Data" Version="8.3.0" />
 		<PackageReference Include="Prism.Core" Version="8.1.97" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\MyToDo.Shared\MyToDo.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="to.db">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
