调用mysql表，创建了几个接口

--- a/MyToDo.Api/appsettings.json
+++ b/MyToDo.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ToDoConnection": "Data Source=to.db"
+    "ToDoConnection": "Data Source=to.db",
+    "MySqlConnection": "server=175.178.166.212;port=3306;database=oadb;uid=root;pwd=h20021023;CharSet=utf8;TreatTinyAsBoolean=true;ConvertZeroDateTime=True;SslMode=None;"
   },
   "Logging": {
     "LogLevel": {
