--- a/MyToDo.Api/MyToDo.Api.csproj
+++ b/MyToDo.Api/MyToDo.Api.csproj
@@ -13,6 +13,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="MySql.Data" Version="8.3.0" />
+		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.4" />
 		<PackageReference Include="Prism.Core" Version="8.1.97" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	</ItemGroup>
